@@ -1,25 +1,26 @@
 @BeginModule
 @NewPage
 @Name      = Invert
-@Title     = Invert fields
+@Title     = Invert latitude
 @Section   = Modification
 @Class     = Modification
 @Arguments = ifile ofile
-@Operators = invertlat invertlon invertlatdes invertlondes invertlatdata invertlondata
+@Operators = invertlat
 
 @BeginDescription
-This module inverts 2D fields on a rectangular grid. Depending on the actual 
-operator the field, only the data or only the grid description is inverted.
+This operator inverts the latitudes of all fields with a regular
+rectangular grid. 
+@C This module inverts 2D fields on a rectangular grid. Depending on the actual 
+@C operator the field, only the data or only the grid description is inverted.
 @EndDescription
 @EndModule
 
 
 @BeginOperator_invertlat
 @Title     = Invert latitude
-
-@BeginDescription
-Inverts the latitude of a field.
-@EndDescription
+@C @BeginDescription
+@C Inverts the latitude of a field.
+@C @EndDescription
 @EndOperator
 
 
