@@ -3,6 +3,7 @@
 	* using CDI library version 1.2.0
 	* add support for netCDF4 classic with deflate option (option -z zip)
 	* Arith: add filltype FILL_FILE [request: Rita Seiffert]
+	* New operator: invertlev
 	* New module: Tests (normal, studentt, chisquare, beta, fisher)
 	* New module: Echam5ini (read_e5ml, write_e5ml)
 	* Version 1.2.0 released
